--- a/src/NavMenu.css
+++ b/src/NavMenu.css
@@ -4,11 +4,13 @@
     height: 5rem;
     align-items: center;
     justify-content: center;
-    font-size: 1.8em;
+    font-size: calc(10px + 2vmin);
+    background-color: #61dafb;
 }
 
 
 nav a {
-    padding-right: 2em;
-    padding-left: 2em;
+    color: #282c34;
+    padding-right: calc(5px + 2vmin);
+    padding-left: calc(5px + 2vmin);
 }
